--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,10 @@
       <hr />
       <!-- <div app-servers></div> -->
       <app-servers></app-servers>
+      <hr />
+      <app-success-alert></app-success-alert>
+      <hr />
+      <app-warning-alert></app-warning-alert>
       <!-- <div class="app-servers"></div> -->
     </div>
   </div>
