--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,5 @@
+<label for="">Server Name</label>
+<input type="text" class="form-control" (input)="onUpdateServerName($event)" />
 <button
   class="btn btn-primary"
   [disabled]="!allowNewServer"
@@ -6,6 +8,6 @@
   Add Server
 </button>
 <!-- <p [innerText]="allowNewServer"></p> -->
-<p>{{ serverCreationStatus }}</p>
+<p>{{ serverName }}</p>
 <app-server></app-server>
 <app-server></app-server>
