--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -19,7 +19,10 @@
 </button>
 <!-- <p [innerText]="allowNewServer"></p> -->
 <!-- <p>{{ serverName }}</p -->
-<p>{{ serverCreationStatus }}</p>
-<p>{{ username }}</p>
-<app-server></app-server>
-<app-server></app-server>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<!-- <p>{{ username }}</p> -->
+
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
+
+<!-- <app-server></app-server>
+<app-server></app-server> -->
