--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -27,5 +27,4 @@
 </p>
 <ng-template #noServer><p>No server was created!</p> </ng-template>
 
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
