--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,25 @@
       <h3>I'm in the AppComponent!</h3>
       <hr />
       <!-- <div app-servers></div> -->
-      <app-servers></app-servers>
+      <!-- <app-servers></app-servers>
       <hr />
       <app-success-alert></app-success-alert>
       <hr />
-      <app-warning-alert></app-warning-alert>
+      <app-warning-alert></app-warning-alert> -->
       <!-- <div class="app-servers"></div> -->
+      <button class="btn btn-primary" (click)="onDisplayDetails()">
+        Display Details
+      </button>
+      <p *ngIf="display">Secret password = buna</p>
+      <div
+        *ngFor="let displayItem of displayDetails"
+        [ngStyle]="{
+          backgroundColor: displayDetails.length >= 5 ? 'blue' : 'transparent'
+        }"
+        [ngClass]="{ 'white-text': displayDetails.length >= 5 }"
+      >
+        {{ displayItem.valueOf() | date: "medium" }}
+      </div>
     </div>
   </div>
 </div>
