--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h3>I'm in the AppComponent!</h3>
-      <hr />
-      <!-- <div app-servers></div> -->
-      <!-- <app-servers></app-servers>
-      <hr />
-      <app-success-alert></app-success-alert>
-      <hr />
-      <app-warning-alert></app-warning-alert> -->
-      <!-- <div class="app-servers"></div> -->
-      <button class="btn btn-primary" (click)="onDisplayDetails()">
-        Display Details
-      </button>
-      <p *ngIf="display">Secret password = buna</p>
-      <div
-        *ngFor="let displayItem of displayDetails; let i = index"
-        [ngStyle]="{
-          backgroundColor: i >= 4 ? 'blue' : 'transparent'
-        }"
-        [ngClass]="{ 'white-text': i >= 4 }"
-      >
-        {{ displayItem.valueOf() | date: "medium" }}
-      </div>
+    <div class="col-md-12">
+      <h2>I'm working</h2>
     </div>
   </div>
 </div>
