--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="col-xs-12"></div>
     <app-server-element
       *ngFor="let serverElement of serverElements"
-      [element]="serverElement"
+      [srvElement]="serverElement"
     ></app-server-element>
   </div>
 </div>
